tests/ui/params_not_yet.stderr
Error [E0003]: expected `:` after the parameter `name`
  --> tests/ui/params_not_yet.lex:1:10
    |
  1 | fn greet(name) {
    |          ^^^^
 Why: every parameter except `self` needs a type after its name
 Fix: write `name: Type`
